--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ havis.capture.adapter.camera (2.7.0-1) unstable; urgency=medium
  
   * Initialization
  
- -- HARTING IT_SD <opensource@HARTING.com>  Fri, 05 Apr 2019 13:24:46 +0200
+ -- Menucha Team <info@menucha.de>  Fri, 19 Mar 2021 11:39:56 +0100
